@@ -17,6 +17,8 @@ python-defaults (2.7.2-2) UNRELEASED; urgency=low
     - PyDist: update dist_fallback file (with atypical Debian package names)
     - disable PyDist feature if dh sequencer is invoked --with pydeb
       (closes: 630502, thanks to Gediminas Paulauskas for the original patch)
+    - warn if public Python extension is linked to libpython2.X, fail if it's
+      linked to a wrong version
 
  -- Piotr Ożarowski <piotr@debian.org>  Sun, 12 Jun 2011 13:28:48 +0200
 
